# otus-mlops

./: .gitignore  README.md
etap11_YC_Terraform/: README.md
etap11_YC_Terraform/infra/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
etap11_YC_Terraform/infra/scripts/: user_data.sh
etap17_ApacheSpark/: README.md
etap17_ApacheSpark/infra/: .terraform.lock.hcl  .terraform.tfstate.lock.info  main.tf  terraform.tfvars.example  variables.tf
etap17_ApacheSpark/infra/scripts/: user_data.sh
etap17_ApacheSpark/jupyter/: main.ipynb
etap17_ApacheSpark/py_script/: clean_data_pipeline.py
etap21_Feast/: README.md  feast_test.ipynb  pyproject.toml
etap21_Feast/feast/: definitions.py  driver_activity.py  driver_on_demand.py  driver_stats.py  feature_store.yaml
etap22_AirFlow_Pipeline/: README.md  pyproject.toml
etap22_AirFlow_Pipeline/dags/: data_pipeline.py
etap22_AirFlow_Pipeline/infra/: .terraform.lock.hcl  main.tf  provider.tf  variables.tf
etap22_AirFlow_Pipeline/infra/modules/airflow-cluster/: main.tf
etap22_AirFlow_Pipeline/infra/modules/iam/: main.tf  variables.tf
etap22_AirFlow_Pipeline/infra/modules/network/: main.tf  versions.tf
etap22_AirFlow_Pipeline/infra/modules/storage/: main.tf  variables.tf
etap22_AirFlow_Pipeline/scripts/: copy_external_data.py  get_iam_token.py  main.py  upload_airflow_vars.py  upload_dags.py  upload_src.py
etap22_AirFlow_Pipeline/src/: data_cleaner.py
