[project]
name = "etap22-airflow-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.14"
dependencies = [
    "boto3==1.42.14",
    "cryptography==46.0.3",
    "httpx>=0.28.1",
    "pyjwt==2.10.1",
    "requests==2.32.5",
    "tqdm>=4.67.1",
    "yandexcloud==0.371.0",
]
